# input-pad

./: AUTHORS  Installation.md  Makefile.am  ProjectHome.md  README  Sources.md  TODO  autogen.sh  configure.ac  input-pad.pc.in  input-pad.spec.in
data/: Makefile.am  alphabet.xml.in.in  base.xml.in  char2hexstr.py  cmd.xml.in  goth.xml.in  group01-base.xml.in  group02-ja.xml.in  group02-zh.xml.in  input-pad.desktop.in  input-pad.ui  ipa-obsolete.xml.in  ipa-unofficial.xml.in  ipa.xml.in  ja.xml.in  keyboard.xml.in  latin.xml.in  runr.xml.in  shaw.xml.in  str.xml.in  w3c.xml.in  w3ctostr.py  zh.xml.in
debian/: README.source  README.source.eek-only  changelog  changelog.eek-only  control  control.eek  control.eek-only  copyright  input-pad.1  input-pad.manpages  libinput-pad-dev.install  libinput-pad-dev.install.eek  libinput-pad-eek-dev.install.eek-only  libinput-pad-eek.install.eek  libinput-pad-eek.install.eek-only  libinput-pad-xtest.install  libinput-pad-xtest.symbols  libinput-pad0.dirs  libinput-pad0.install  libinput-pad0.symbols  libinput-pad1.dirs  libinput-pad1.symbols  rules  rules.eek  rules.eek-only  substvars  watch
engine/: Makefile.am  engine.c  engine.h  input-pad.xml.in  main.c
input-pad/: Makefile.am  app-menu.ui  button-gtk.c  button-gtk.h  combobox-gtk.c  combobox-gtk.h  dialog.ui  eek-gtk.c  eek-gtk.h  geometry-gdk.c  geometry-gdk.h  geometry-xkb.h  i18n.h  input-pad-group.h  input-pad-kbdui-gtk.h  input-pad-main.c  input-pad-marshal.list  input-pad-private.h  input-pad-window-gtk.h  input-pad.1.in  input-pad.gresource.xml  input-pad.h  kbdui-gtk.c  keysym-str2val.c  keysym-str2val.h  parse-pad.c  unicode_block.h  unicode_block.sh  viewport-gtk.c  viewport-gtk.h  window-gtk.c  window-gtk.ui  xtest-gdk.c
m4/: Makefile.am  input-pad.m4
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ca.po  es.po  eu.po  fr.po  hu.po  input-pad.pot  ja.po  ka.po  pt_BR.po  reform-weblate-pot.sh  uk.po  zh_CN.po  zh_TW.po
pyinput-pad/: Makefile.am  input_pad.i  input_pad_group.i  input_pad_window_gtk.i  pyinput_pad.pth.in  test_input_pad.py  test_input_pad_gir.py  test_input_pad_group.py  test_input_pad_gtk.py
trunk/: ChangeLog
wiki/: Installation.wiki  Sources.wiki
